<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/samsung"
        android:text="@string/let_s_sign_nyou_in"
        android:textColor="@color/lynch"
        android:textFontWeight="1000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="373dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:background="@drawable/et_background"
        android:drawableEnd="@drawable/baseline_mail_outline_24"
        android:inputType="textEmailAddress"
        android:labelFor="@id/et_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/lynch"
        android:textColorHint="@color/lynch"
        app:layout_constraintBottom_toTopOf="@+id/apple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:background="@drawable/et_background"
        android:drawableEnd="@drawable/baseline_visibility_24"
        android:inputType="textPassword"
        android:labelFor="@id/et_pass"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/lynch"
        android:textColorHint="@color/lynch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="324dp"
        android:fontFamily="@font/samsung"
        android:text="@string/forgot_password"
        android:textColor="@color/lynch"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="157dp"
        android:background="@drawable/btn_primary_background"
        android:fontFamily="@font/samsung"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.968" />

    <TextView
        android:id="@+id/tv_sign_in_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:fontFamily="@font/samsung"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/lynch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.946" />

    <Button
        android:id="@+id/google"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:background="@drawable/btn_secondary_background"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:text="@string/google"
        android:textColor="@color/lynch"
        android:textAllCaps="false"
        android:fontFamily="@font/samsung"
        app:layout_constraintBottom_toBottomOf="@+id/apple"
        app:layout_constraintEnd_toStartOf="@+id/apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/apple" />

    <Button
        android:id="@+id/apple"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/btn_secondary_background"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:text="@string/apple"
        android:textColor="@color/lynch"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textAllCaps="false"
        android:fontFamily="@font/samsung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />
</androidx.constraintlayout.widget.ConstraintLayout>